--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       dockerfile: apps/frontend/Dockerfile
     container_name: frontend 
     volumes:
-      - frontend-volume:/usr/src/app
+      - ../dist/apps/frontend:/usr/share/nginx/html
+      - ../apps/frontend/nginx.conf:/etc/nginx/nginx.conf 
     restart: always
     ports:
       - ${FRONTEND_PORT}:80
