--- a/package.json
+++ b/package.json
@@ -21,21 +21,25 @@
     "@angular/router": "~16.0.0",
     "@mikro-orm/core": "^5.7.12",
     "@mikro-orm/mysql": "^5.7.12",
+    "@mikro-orm/nestjs": "^5.1.8",
     "@nestjs/common": "^9.1.1",
     "@nestjs/config": "^2.3.3",
     "@nestjs/core": "^9.1.1",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.3",
     "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/platform-fastify": "^9.4.3",
     "@nx/angular": "^16.2.2",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
+    "argon2": "^0.30.3",
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -48,6 +52,8 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "~16.0.0",
     "@angular/language-service": "~16.0.0",
+    "@mikro-orm/cli": "^5.7.12",
+    "@mikro-orm/migrations": "^5.7.12",
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.1.1",
     "@nx/cypress": "16.2.2",
@@ -63,6 +69,7 @@
     "@schematics/angular": "~16.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "cypress": "^12.11.0",
@@ -83,7 +90,7 @@
     "useTsNode": true,
     "tsConfigPath": "tsconfig.orm.json",
     "configPaths": [
-      "./libs/backend/school-service/core/src/mikro-orm.config.ts"
+      "./libs/backend/user-service/core/src/mikro-orm.config.ts"
     ]
   }
 }
