--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.0.0",
-    "@angular/common": "~16.0.0",
-    "@angular/compiler": "~16.0.0",
-    "@angular/core": "~16.0.0",
-    "@angular/forms": "~16.0.0",
-    "@angular/platform-browser": "~16.0.0",
-    "@angular/platform-browser-dynamic": "~16.0.0",
-    "@angular/router": "~16.0.0",
+    "@angular/animations": "16.2.1",
+    "@angular/common": "16.2.1",
+    "@angular/compiler": "16.2.1",
+    "@angular/core": "16.2.1",
+    "@angular/forms": "16.2.1",
+    "@angular/platform-browser": "16.2.1",
+    "@angular/platform-browser-dynamic": "16.2.1",
+    "@angular/router": "16.2.1",
     "@mikro-orm/core": "^5.7.12",
     "@mikro-orm/mysql": "^5.7.12",
     "@mikro-orm/nestjs": "^5.1.8",
-    "@nestjs/common": "^9.1.1",
+    "@nestjs/common": "10.1.3",
     "@nestjs/config": "^2.3.3",
-    "@nestjs/core": "^9.1.1",
+    "@nestjs/core": "10.1.3",
     "@nestjs/jwt": "^10.0.3",
     "@nestjs/microservices": "^9.4.3",
-    "@nestjs/platform-express": "^9.1.1",
+    "@nestjs/platform-express": "10.1.3",
     "@nestjs/platform-fastify": "^9.4.3",
-    "@nx/angular": "^16.2.2",
+    "@nx/angular": "16.7.0",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "argon2": "^0.30.3",
@@ -43,54 +43,55 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.0",
-    "@angular-devkit/core": "~16.0.0",
-    "@angular-devkit/schematics": "~16.0.0",
+    "@angular-devkit/build-angular": "16.2.0",
+    "@angular-devkit/core": "16.2.0",
+    "@angular-devkit/schematics": "16.2.0",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
     "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "~16.0.0",
-    "@angular/language-service": "~16.0.0",
+    "@angular/compiler-cli": "16.2.1",
+    "@angular/language-service": "16.2.1",
     "@mikro-orm/cli": "^5.7.12",
     "@mikro-orm/migrations": "^5.7.12",
-    "@nestjs/schematics": "^9.1.0",
-    "@nestjs/testing": "^9.1.1",
-    "@nx/cypress": "16.2.2",
-    "@nx/eslint-plugin": "16.2.2",
-    "@nx/jest": "16.2.2",
-    "@nx/js": "16.2.2",
-    "@nx/linter": "16.2.2",
-    "@nx/nest": "16.2.2",
-    "@nx/node": "16.2.2",
-    "@nx/web": "16.2.2",
-    "@nx/webpack": "16.2.2",
-    "@nx/workspace": "16.2.2",
-    "@schematics/angular": "~16.0.0",
+    "@nestjs/schematics": "10.0.2",
+    "@nestjs/testing": "10.1.3",
+    "@nx/cypress": "16.7.0",
+    "@nx/eslint-plugin": "16.7.0",
+    "@nx/jest": "16.7.0",
+    "@nx/js": "16.7.0",
+    "@nx/linter": "16.7.0",
+    "@nx/nest": "16.7.0",
+    "@nx/node": "16.7.0",
+    "@nx/web": "16.7.0",
+    "@nx/webpack": "16.7.0",
+    "@nx/workspace": "16.7.0",
+    "@schematics/angular": "16.2.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "cypress": "12.17.4",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "2.14.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "nx": "16.2.2",
+    "nx": "16.7.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
+    "typescript": "5.1.6"
   },
   "mikro-orm": {
     "useTsNode": true,
     "tsConfigPath": "tsconfig.orm.json",
     "configPaths": [
-      "./libs/backend/user-service/core/src/mikro-orm.config.ts"
+      "./libs/backend/school-service/core/src/mikro-orm.config.ts"
     ]
   }
 }
+
