--- a/.github/workflows/nx-affected.yml
+++ b/.github/workflows/nx-affected.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install pnpm
+      run: npm install -g pnpm
+
     - name: Cache .pnpm-store
       uses: actions/cache@v2
       with:
