--- a/.github/workflows/nx-affected.yml
+++ b/.github/workflows/nx-affected.yml
@@ -20,7 +20,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install pnpm
-      run: npm install -g pnpm
+      run: npm install -g pnpm@7.26.3
 
     - name: Cache .pnpm-store
       uses: actions/cache@v2
