--- a/.github/workflows/nx-affected.yml
+++ b/.github/workflows/nx-affected.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
