--- a/docker/prod/docker-compose.auth-service.yml
+++ b/docker/prod/docker-compose.auth-service.yml
@@ -2,13 +2,11 @@ version: '3.9'
 services:
   auth-service:
     env_file:
-      - ../.env.prod
+      - ../../.env.docker
     build:
-      context: ../
-      dockerfile: apps/auth-service/Dockerfile
+      context: ../../
+      dockerfile: apps/auth-service/docker/Dockerfile.prod
     container_name: auth-service
-    profiles:
-      - production
     volumes:
       - auth-service-volume:/usr/src/app
     restart: always
