--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --projects=api-gateway,auth-service,school-service,user-service --parallel --maxParallel=4",
-    "docker": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.school-service.yml -f docker/docker-compose.user-service.yml -f docker/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d",
-    "docker:prod": "docker-compose -f docker/docker-compose.yml -f docker/docker-compose.school-service.yml -f docker/docker-compose.user-service.yml -f docker/docker-compose.auth-service.yml -f docker/docker-compose.flyway.yml --env-file docker/.docker-compose.env --profile production up -d",
+    "docker:dev": "docker-compose -f docker/dev/docker-compose.yml -f docker/dev/docker-compose.school-service.yml -f docker/dev/docker-compose.user-service.yml -f docker/dev/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d",
+    "docker:prod": "docker-compose -f docker/prod/docker-compose.yml -f docker/prod/docker-compose.school-service.yml -f docker/prod/docker-compose.user-service.yml -f docker/prod/docker-compose.auth-service.yml -f docker/prod/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d",
     "migration:generate": "npx mikro-orm migration:create --initial",
     "build:all": "nx run-many --targets=build --all"
   },
@@ -29,7 +29,7 @@
     "@nestjs/microservices": "^9.4.3",
     "@nestjs/platform-express": "10.1.3",
     "@nestjs/platform-fastify": "^9.4.3",
-    "@nx/angular": "17.0.2",
+    "@nx/angular": "16.7.0",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "argon2": "^0.30.3",
@@ -56,16 +56,16 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
-    "@nx/cypress": "17.0.2",
-    "@nx/eslint-plugin": "17.0.2",
-    "@nx/jest": "17.0.2",
-    "@nx/js": "17.0.2",
-    "@nx/linter": "17.0.2",
-    "@nx/nest": "17.0.2",
-    "@nx/node": "17.0.2",
-    "@nx/web": "17.0.2",
-    "@nx/webpack": "17.0.2",
-    "@nx/workspace": "17.0.2",
+    "@nx/cypress": "16.7.0",
+    "@nx/eslint-plugin": "16.7.0",
+    "@nx/jest": "16.7.0",
+    "@nx/js": "16.7.0",
+    "@nx/linter": "16.7.0",
+    "@nx/nest": "16.7.0",
+    "@nx/node": "16.7.0",
+    "@nx/web": "16.7.0",
+    "@nx/webpack": "16.7.0",
+    "@nx/workspace": "16.7.0",
     "@schematics/angular": "16.2.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
@@ -74,13 +74,13 @@
     "@typescript-eslint/parser": "5.62.0",
     "cypress": "12.17.4",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "2.14.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "nx": "17.0.2",
+    "nx": "16.7.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -94,4 +94,3 @@
     ]
   }
 }
-
