--- a/apps/frontend/docker/Dockerfile.prod
+++ b/apps/frontend/docker/Dockerfile.prod
@@ -1,5 +1,9 @@
 FROM nginx:alpine 
 
+COPY ./apps/frontend/nginx.conf /etc/nginx/nginx.conf
+
+COPY ./dist/apps/frontend /usr/share/nginx/html
+
 ENV NODE_ENV production
 
 WORKDIR /usr/share/nginx/html
