--- a/docker/prod/docker-compose.yml
+++ b/docker/prod/docker-compose.yml
@@ -4,12 +4,9 @@ services:
     env_file:
       - ../../.env.docker
     build:
-      context: ../
+      context: ../../
       dockerfile: apps/frontend/docker/Dockerfile.prod
     container_name: frontend 
-    volumes:
-      - ../../dist/apps/frontend:/usr/share/nginx/html
-      - ../../apps/frontend/nginx.conf:/etc/nginx/nginx.conf 
     restart: always
     ports:
       - ${FRONTEND_PORT}:80
