--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --projects=api-gateway,auth-service,school-service,user-service --parallel --maxParallel=4",
-    "docker:dev": "docker-compose -f docker/dev/docker-compose.yml -f docker/dev/docker-compose.school-service.yml -f docker/dev/docker-compose.user-service.yml -f docker/dev/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d",
-    "docker:prod": "docker-compose -f docker/prod/docker-compose.yml -f docker/prod/docker-compose.school-service.yml -f docker/prod/docker-compose.user-service.yml -f docker/prod/docker-compose.auth-service.yml -f docker/prod/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d",
+    "docker:dev": "docker-compose -f docker/dev/docker-compose.yml -f docker/dev/docker-compose.school-service.yml -f docker/dev/docker-compose.user-service.yml -f docker/dev/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d --build",
+    "docker:prod": "npm run build:all && docker-compose -f docker/prod/docker-compose.yml -f docker/prod/docker-compose.school-service.yml -f docker/prod/docker-compose.user-service.yml -f docker/prod/docker-compose.auth-service.yml -f docker/prod/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d --build",
     "migration:generate": "npx mikro-orm migration:create --initial",
     "build:all": "nx run-many --targets=build --all"
   },
