--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,6 @@ jobs:
     - name: Build all projects
       run: pnpm run build:all
 
-    - name: Build images
-      run: pnpm run build:docker
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
@@ -39,4 +36,4 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     - name: Build and push Docker Images
-      run: pnpm run push:docker
+      run: ./tools/scripts/build-and-push.sh
