--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,11 @@ on:
 
 jobs:
   deploy:
-    needs: build
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    needs: build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
     - name: Check Out Repo
       uses: actions/checkout@v2
