--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
 name: Deploy
-on:
-  workflow_run:
-    workflows: ["Build Affected"]
-    branches: [deployment-action]
+on: [push]
+
 
 jobs:
   deploy:
