--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,15 @@ jobs:
     - name: Build all projects
       run: pnpm run build:all
 
+    - name: Install Certificates
+      run: |
+        sudo mkdir -p /etc/docker/certs.d/registry.prodigyman.fr:5000
+        sudo cp ./tools/certificates/registry.prodigyman.fr.crt /etc/docker/certs.d/registry.prodigyman.fr:5000/
+        sudo update-ca-certificates
+
+    - name: Restart Docker
+      run: sudo systemctl restart docker
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
