--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,19 +26,10 @@ jobs:
     - name: Build all projects
       run: pnpm run build:all
 
-    - name: Install Certificates
-      run: |
-        sudo mkdir -p /etc/docker/certs.d/registry.prodigyman.fr
-        sudo cp ./tools/certificates/registry.prodigyman.fr.crt /etc/docker/certs.d/registry.prodigyman.fr/
-        sudo update-ca-certificates
-
-    - name: Restart Docker
-      run: sudo systemctl restart docker
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
-        registry: registry.prodigyman.fr
+        registry: ghcr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
