[AKT] debug CI build action + update script deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,5 +33,12 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
 
+    - name: Debug action
+      run: |
+        echo "List root folder"
+        ls -al 
+        echo "List projets "
+        ls -alR
+
     - name: Build and push Docker Images
       run: ./tools/scripts/build-push-docker.sh
