--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,26 @@
 name: Deploy
-on: [push]
 
+on:
+  pull_request:
+    types: [closed]
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
     steps:
     - name: Check Out Repo
       uses: actions/checkout@v2
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 18
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
 
     - name: Install pnpm
       run: npm install -g pnpm@8.6.0
@@ -35,3 +40,10 @@ jobs:
 
     - name: Build and push Docker Images
       run: ./tools/scripts/build-push-docker.sh
+
+    - name: Deploy to VPS
+      if: github.ref == 'refs/heads/main'
+      run: |
+        ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} debian@162.19.243.159 'bash -s' < /deploy.sh
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}   
