--- a/.github/workflows/nx-affected.yml
+++ b/.github/workflows/nx-affected.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: [18.x]
 
     steps:
     - name: Checkout Repo
@@ -16,10 +16,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 18
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
 
     - name: Install pnpm
       run: npm install -g pnpm@8.6.0
