--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,46 @@
-name: Deploy to VPS
+name: Deploy
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
-      - main  # This will trigger the workflow when changes are pushed to the main branch.
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    if: github.event.pull_request.merged == true
     steps:
-    - name: Checkout code
+    - name: Check Out Repo
       uses: actions/checkout@v2
-    - name: Install rsync
-      run: sudo apt-get update && sudo apt-get install -y rsync
-    - name: Set up SSH
-      run: |
-        mkdir -p ~/.ssh/
-        echo "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H 162.19.243.159 >> ~/.ssh/known_hosts
 
-    - name: Sync files & Deploy to VPS
+    - name: Setup Node.js 18
+      uses: actions/setup-node@v2
+      with:
+        node-version: 18
+
+    - name: Install pnpm
+      run: npm install -g pnpm@8.6.0
+
+    - name: Install Dependencies
+      run: pnpm install
+    
+    - name: Build all projects
+      run: pnpm run build:all
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+
+    - name: Build and push Docker Images
+      run: ./tools/scripts/build-push-docker.sh
+
+    - name: Deploy to VPS
+      if: github.ref == 'refs/heads/main'
+      run: |
+        ssh -o StrictHostKeyChecking=no -i ${{ secrets.SSH_PRIVATE_KEY }} debian@162.19.243.159 'bash -s' < /deploy.sh
       env:
-        SSH_USER: ${{ secrets.SSH_USER }}
-        SSH_HOST: ${{ secrets.SSH_HOST }}
-        DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-      run: |
-        rsync -avz --exclude='.git/' --exclude='node_modules/' ./ $SSH_USER@$SSH_HOST:$DEPLOY_PATH
-        ssh $SSH_USER@$SSH_HOST "cd $DEPLOY_PATH && docker-compose down && docker-compose up -d --build"
-
-
-    - name: Run Application
-      run: |
-        ssh $SSH_USER@$SSH_HOST "cd $DEPLOY_PATH && docker-compose down && docker-compose up -d --build"
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}   
