--- a/.github/workflows/nx-affected.yml
+++ b/.github/workflows/nx-affected.yml
@@ -5,21 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
+    
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
-    - name: Setup Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js 18
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
 
     - name: Install pnpm
       run: npm install -g pnpm@8.6.0
