--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "@mikro-orm/core": "^5.7.12",
     "@mikro-orm/mysql": "^5.7.12",
     "@mikro-orm/nestjs": "^5.1.8",
-    "@nestjs/common": "10.1.3",
-    "@nestjs/config": "^2.3.3",
-    "@nestjs/core": "10.1.3",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/core": "^10.1.3",
     "@nestjs/jwt": "^10.0.3",
-    "@nestjs/microservices": "^9.4.3",
-    "@nestjs/platform-express": "10.1.3",
-    "@nestjs/platform-fastify": "^9.4.3",
-    "@nx/angular": "16.7.0",
+    "@nestjs/microservices": "^10.0.0",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/platform-fastify": "^10.0.0",
+    "@nx/angular": "17.0.3",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
     "argon2": "^0.30.3",
@@ -58,16 +58,16 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
-    "@nx/cypress": "16.7.0",
-    "@nx/eslint-plugin": "16.7.0",
-    "@nx/jest": "16.7.0",
-    "@nx/js": "16.7.0",
-    "@nx/linter": "16.7.0",
-    "@nx/nest": "16.7.0",
-    "@nx/node": "16.7.0",
-    "@nx/web": "16.7.0",
-    "@nx/webpack": "16.7.0",
-    "@nx/workspace": "16.7.0",
+    "@nx/cypress": "17.0.3",
+    "@nx/eslint-plugin": "17.0.3",
+    "@nx/jest": "17.0.3",
+    "@nx/js": "17.0.3",
+    "@nx/linter": "17.0.3",
+    "@nx/nest": "17.0.3",
+    "@nx/node": "17.0.3",
+    "@nx/web": "17.0.3",
+    "@nx/webpack": "17.0.3",
+    "@nx/workspace": "17.0.3",
     "@schematics/angular": "16.2.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
@@ -76,13 +76,13 @@
     "@typescript-eslint/parser": "5.62.0",
     "cypress": "12.17.4",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.14.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "nx": "16.7.0",
+    "nx": "17.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -96,3 +96,4 @@
     ]
   }
 }
+
