--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@nx/webpack": "17.0.3",
     "@nx/workspace": "17.0.3",
     "@schematics/angular": "16.2.0",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/uuid": "^9.0.2",
@@ -82,6 +84,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "17.0.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -96,4 +99,3 @@
     ]
   }
 }
-
