--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "16.2.1",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "16.2.1",
     "@angular/compiler": "16.2.1",
     "@angular/core": "16.2.1",
@@ -31,6 +32,7 @@
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/platform-fastify": "^10.0.0",
+    "@ngxs/store": "^3.8.1",
     "@nx/angular": "17.0.3",
     "amqp-connection-manager": "^4.1.13",
     "amqplib": "^0.10.3",
@@ -38,6 +40,8 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.7.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
