--- a/apps/frontend/docker/Dockerfile.prod
+++ b/apps/frontend/docker/Dockerfile.prod
@@ -1,9 +1,41 @@
-FROM nginx:alpine 
+# Étape 1 : Construire l'application React
+FROM node:18 AS build
+WORKDIR /app
 
-COPY ./apps/frontend/nginx.conf /etc/nginx/nginx.conf
+# Copier les fichiers de package.json et package-lock.json
+COPY package.json pnpm-lock.yaml nx.json tsconfig*.json ./
 
-COPY ./dist/apps/frontend /usr/share/nginx/html
+RUN npm install -g pnpm
+# Installer les dépendances
+RUN pnpm install --frozen-lockfile
 
-ENV NODE_ENV production
+# Copier le reste des fichiers de l'application
+COPY . .
 
-WORKDIR /usr/share/nginx/html
+# Construire l'application React optimisée pour la production
+RUN npm run build:front:prod
+
+# Étape 2 : Créer une image légère pour servir l'application construite avec Nginx
+FROM nginx:alpine
+
+# Supprimer la configuration Nginx par défaut
+RUN rm /etc/nginx/conf.d/default.conf
+# Supprimer les fichiers html par défaut
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copier la configuration Nginx personnalisée
+COPY ./apps/frontend/.nginx/nginx.conf /etc/nginx/nginx.conf
+
+# Copier les fichiers construits de l'application React depuis l'étape précédente
+COPY --from=build /app/dist/apps/frontend /usr/share/nginx/html
+
+# Definition de l'environnement
+ENV NODE_ENV=production
+
+ENV PORT=8080
+
+# Exposer le port 8080
+EXPOSE 8080
+
+# Démarrer le serveur Nginx
+CMD ["nginx", "-g", "daemon off;"]
