--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "@angular/platform-browser": "16.2.1",
     "@angular/platform-browser-dynamic": "16.2.1",
     "@angular/router": "16.2.1",
+    "@fullcalendar/angular": "^6.1.9",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/google-calendar": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/multimonth": "^6.1.9",
     "@mikro-orm/core": "^5.7.12",
     "@mikro-orm/mysql": "^5.7.12",
     "@mikro-orm/nestjs": "^5.1.8",
@@ -33,6 +39,7 @@
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/platform-fastify": "^10.0.0",
+    "@ngneat/until-destroy": "^10.0.0",
     "@ngxs/store": "^3.8.1",
     "@nx/angular": "17.0.3",
     "amqp-connection-manager": "^4.1.13",
@@ -63,6 +70,7 @@
     "@mikro-orm/migrations": "^5.7.12",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
+    "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "17.0.3",
     "@nx/eslint-plugin": "17.0.3",
     "@nx/jest": "17.0.3",
