--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@fullcalendar/daygrid": "^6.1.9",
     "@fullcalendar/google-calendar": "^6.1.9",
     "@fullcalendar/interaction": "^6.1.9",
-    "@fullcalendar/multimonth": "^6.1.9", 
+    "@fullcalendar/multimonth": "^6.1.9",
     "@mikro-orm/core": "^5.9.4",
     "@mikro-orm/mysql": "^5.9.4",
     "@mikro-orm/nestjs": "^5.2.2",
@@ -49,6 +49,7 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jwt-decode": "^4.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.7.2",
     "reflect-metadata": "^0.1.13",
