--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "axios": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ical-generator": "^6.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.7.2",
