prepare user-service deploy

--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "docker:prod": "npm run build:all && docker-compose -f docker/prod/docker-compose.yml -f docker/prod/docker-compose.school-service.yml -f docker/prod/docker-compose.user-service.yml -f docker/prod/docker-compose.auth-service.yml -f docker/prod/docker-compose.flyway.yml --env-file docker/.docker-compose.env up -d --build",
     "migration:generate": "npx mikro-orm migration:create --initial",
     "build:front:prod": "nx run frontend:build --configuration=production",
+    "build:user-service:staging"  : "nx run user-service:build:staging",
+    "build:school-service:staging": "nx run school-service:build:staging",
     "build:all": "nx run-many --targets=build -p api-gateway,auth-service,school-service,user-service,frontend --parallel --maxParallel=4",
     "build:docker": "docker build -t campuscalendar/api-gateway:latest -f apps/api-gateway/docker/Dockerfile.prod . && docker build -t campuscalendar/auth-service:latest -f apps/auth-service/docker/Dockerfile.prod . && docker build -t campuscalendar/school-service:latest -f apps/school-service/docker/Dockerfile.prod . && docker build -t campuscalendar/user-service:latest -f apps/user-service/docker/Dockerfile.prod .",
-    "push:docker": "docker push campuscalendar/api-gateway:latest && docker push campuscalendar/auth-service:latest && docker push campuscalendar/school-service:latest && docker push campuscalendar/user-service:latest"
+    "push:docker": "docker push campuscalendar/api-gateway:latest && docker push campuscalendar/auth-service:latest && docker push campuscalendar/school-service:latest && docker push campuscalendar/user-service:latest",
+    "school-service:stg": "env-cmd -f apps/school-service/env/.env.staging nx run school-service:serve:staging",
+    "user-service:stg": "env-cmd -f apps/user-service/env/.env.staging nx run user-service:serve:staging"
   },
   "private": true,
   "dependencies": {
@@ -97,6 +101,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "cypress": "12.17.4",
+    "env-cmd": "^10.1.0",
     "eslint": "8.46.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.14.0",
