--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -40,6 +40,21 @@
           ],
           "outputHashing": "all"
         },
+        "staging": {
+          "fileReplacements": [
+            {
+              "replace": "libs/frontend/shared/environment/src/lib/environment.ts",
+              "with": "libs/frontend/shared/environment/src/lib/environment.staging.ts"
+            }
+          ],
+          "optimization": true,
+          "outputHashing": "all",
+          "sourceMap": false,
+          "namedChunks": false,
+          "extractLicenses": true,
+          "vendorChunk": false,
+          "buildOptimizer": true
+        },
         "development": {
           "buildOptimizer": false,
           "optimization": false,
@@ -59,6 +74,9 @@
         },
         "development": {
           "browserTarget": "frontend:build:development"
+        },
+        "staging": {
+          "browserTarget": "frontend:build:staging"
         }
       },
       "defaultConfiguration": "development",
