--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build:front:prod": "nx run frontend:build --configuration=production",
     "build:user-service:staging"  : "nx run user-service:build:staging",
     "build:school-service:staging": "nx run school-service:build:staging",
+    "build:api-gateway:staging": "nx run api-gateway:build:staging",
+    "build:auth-service:staging": "nx run auth-service:build:staging",
+    "build:front:staging": "nx run frontend:build:staging",
     "build:all": "nx run-many --targets=build -p api-gateway,auth-service,school-service,user-service,frontend --parallel --maxParallel=4",
     "build:docker": "docker build -t campuscalendar/api-gateway:latest -f apps/api-gateway/docker/Dockerfile.prod . && docker build -t campuscalendar/auth-service:latest -f apps/auth-service/docker/Dockerfile.prod . && docker build -t campuscalendar/school-service:latest -f apps/school-service/docker/Dockerfile.prod . && docker build -t campuscalendar/user-service:latest -f apps/user-service/docker/Dockerfile.prod .",
     "push:docker": "docker push campuscalendar/api-gateway:latest && docker push campuscalendar/auth-service:latest && docker push campuscalendar/school-service:latest && docker push campuscalendar/user-service:latest",
