--- a/apps/auth-service/project.json
+++ b/apps/auth-service/project.json
@@ -21,7 +21,8 @@
       },
       "configurations": {
         "development": {},
-        "production": {}
+        "production": {},
+        "staging": {}
       }
     },
     "serve": {
@@ -36,6 +37,9 @@
         },
         "production": {
           "buildTarget": "auth-service:build:production"
+        },
+        "staging": {
+          "buildTarget": "auth-service:build:staging"
         }
       }
     },
