--- a/apps/frontend/docker/Dockerfile.staging
+++ b/apps/frontend/docker/Dockerfile.staging
@@ -13,7 +13,7 @@ RUN pnpm install --frozen-lockfile
 COPY . .
 
 # Construire l'application React optimisée pour la production
-RUN npm run build:front:prod
+RUN npm run build:front:staging
 
 # Étape 2 : Créer une image légère pour servir l'application construite avec Nginx
 FROM nginx:alpine
@@ -30,7 +30,7 @@ COPY ./apps/frontend/.nginx/nginx.conf /etc/nginx/nginx.conf
 COPY --from=build /app/dist/apps/frontend /usr/share/nginx/html
 
 # Definition de l'environnement
-ENV NODE_ENV=production
+ENV NODE_ENV=staging
 
 ENV PORT=8080
 
