--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "campuscalendar",
+  "prefix": "frontend",
   "sourceRoot": "apps/frontend/src",
   "tags": [],
   "targets": {
@@ -15,6 +15,7 @@
         "main": "apps/frontend/src/main.ts",
         "polyfills": ["zone.js"],
         "tsConfig": "apps/frontend/tsconfig.app.json",
+        "inlineStyleLanguage": "scss",
         "assets": ["apps/frontend/src/favicon.ico", "apps/frontend/src/assets"],
         "styles": [
           "apps/frontend/src/styles.scss",
@@ -40,21 +41,6 @@
           ],
           "outputHashing": "all"
         },
-        "staging": {
-          "fileReplacements": [
-            {
-              "replace": "libs/frontend/shared/environment/src/lib/environment.ts",
-              "with": "libs/frontend/shared/environment/src/lib/environment.staging.ts"
-            }
-          ],
-          "optimization": true,
-          "outputHashing": "all",
-          "sourceMap": false,
-          "namedChunks": false,
-          "extractLicenses": true,
-          "vendorChunk": false,
-          "buildOptimizer": true
-        },
         "development": {
           "buildOptimizer": false,
           "optimization": false,
@@ -74,9 +60,6 @@
         },
         "development": {
           "browserTarget": "frontend:build:development"
-        },
-        "staging": {
-          "browserTarget": "frontend:build:staging"
         }
       },
       "defaultConfiguration": "development",
@@ -109,12 +92,6 @@
           "ci": true,
           "codeCoverage": true
         }
-      }
-    },
-    "serve-static": {
-      "executor": "@nx/web:file-server",
-      "options": {
-        "buildTarget": "frontend:build"
       }
     }
   }
