--- a/apps/auth-service/docker/Dockerfile.staging
+++ b/apps/auth-service/docker/Dockerfile.staging
@@ -3,7 +3,7 @@ FROM node:18 AS build
 WORKDIR /app
 
 # Copier les fichiers de package.json et package-lock.json
-COPY package.json pnpm-lock.yaml ./
+COPY package.json pnpm-lock.yaml nx.json tsconfig*.json ./
 
 RUN npm install -g pnpm
 # Installer les dépendances
