--- a/apps/school-service/env/.env.staging
+++ b/apps/school-service/env/.env.staging
@@ -1,9 +1,9 @@
-MYSQL_DATABASE=bkemlmqyhrtbozyrw4k6
-MYSQL_USER=uxfpafdy1w9gdpu8
-MYSQL_PASSWORD=eMWYr5oF8LxkKN3ruEZi
+MYSQL_DATABASE=campuscalendar
+MYSQL_USER=admin
+MYSQL_PASSWORD=h90nWuVq382lbOHKwYoJ
 
 SCHOOL_SERVICE_DB_PORT=3306
-SCHOOL_SERVICE_MYSQL_HOST=bkemlmqyhrtbozyrw4k6-mysql.services.clever-cloud.com
+SCHOOL_SERVICE_MYSQL_HOST=school-service-db.crrdvcb764m8.eu-west-3.rds.amazonaws.com
 MESSAGE_BROKER_URI=amqps://afbpwrok:b8juZE_qHDqqznaFJ6Vl2FYOmMx0Wk8N@rat.rmq2.cloudamqp.com/afbpwrok
 # Queues
 
