--- a/apps/user-service/env/.env.staging
+++ b/apps/user-service/env/.env.staging
@@ -1,9 +1,9 @@
-MYSQL_DATABASE=bfocdhid36hlkhu2p9q3
-MYSQL_USER=u3g9hunqzy13kxeu
-MYSQL_PASSWORD=SDLUjycEOrqrOJMOYLWo
+MYSQL_DATABASE=campuscalendar
+MYSQL_USER=admin
+MYSQL_PASSWORD=7t4GlNgAa0kNxPogolCT
 
 USER_SERVICE_DB_PORT=3306
-USER_SERVICE_MYSQL_HOST=bfocdhid36hlkhu2p9q3-mysql.services.clever-cloud.com
+USER_SERVICE_MYSQL_HOST=user-service-db.crrdvcb764m8.eu-west-3.rds.amazonaws.com
 MESSAGE_BROKER_URI=amqps://afbpwrok:b8juZE_qHDqqznaFJ6Vl2FYOmMx0Wk8N@rat.rmq2.cloudamqp.com/afbpwrok
 # Queues
 
