update rabbitmq instance

--- a/apps/school-service/env/.env.staging
+++ b/apps/school-service/env/.env.staging
@@ -4,7 +4,8 @@ MYSQL_PASSWORD=h90nWuVq382lbOHKwYoJ
 
 SCHOOL_SERVICE_DB_PORT=3306
 SCHOOL_SERVICE_MYSQL_HOST=school-service-db.crrdvcb764m8.eu-west-3.rds.amazonaws.com
-MESSAGE_BROKER_URI=amqps://afbpwrok:b8juZE_qHDqqznaFJ6Vl2FYOmMx0Wk8N@rat.rmq2.cloudamqp.com/afbpwrok
+MESSAGE_BROKER_URI=amqps://campuscalendar:KaeNU7JetQnFlxE@b-e1c07928-ec29-40c4-a390-f35930ac229d.mq.eu-west-3.amazonaws.com:5671
+
 # Queues
 
 # API_GATEWAY -> USER_SERVICE
