--- a/apps/auth-service/env/.env.staging
+++ b/apps/auth-service/env/.env.staging
@@ -1,4 +1,5 @@
-MESSAGE_BROKER_URI=amqps://afbpwrok:b8juZE_qHDqqznaFJ6Vl2FYOmMx0Wk8N@rat.rmq2.cloudamqp.com/afbpwrok
+MESSAGE_BROKER_URI=amqps://campuscalendar:KaeNU7JetQnFlxE@b-e1c07928-ec29-40c4-a390-f35930ac229d.mq.eu-west-3.amazonaws.com:5671
+
 # Queues
 
 # API_GATEWAY -> USER_SERVICE
