prod docker compose ready

--- a/apps/frontend/.nginx/nginx.conf
+++ b/apps/frontend/.nginx/nginx.conf
@@ -1,35 +1,26 @@
-worker_processes 4;
-
-events { worker_connections 1024; }
+# the events block is required
+events{}
 
 http {
-    server {
-        listen 8080;
+    # include the default mime.types to map file extensions to MIME types
+    include /etc/nginx/mime.types; 
 
-        gzip on;
-        gzip_disable "msie6";
+    server {        
+        # set the root directory for the server (we need to copy our 
+        # application files here)
+        root /usr/share/nginx/html;
 
-        gzip_comp_level 6;
-        gzip_min_length 1100;
-        gzip_buffers 16 8k;
-        gzip_proxied any;
-        gzip_types
-            text/plain
-            text/css
-            text/js
-            text/xml
-            text/javascript
-            application/javascript
-            application/json
-            application/xml
-            application/rss+xml
-            image/svg+xml;
+        # set the default index file for the server (Angular generates the 
+        # index.html file for us and it will be in the above directory)
+        index index.html;
 
-        root   /usr/share/nginx/html;
-        index  /index.html;
-        include /etc/nginx/mime.types;
-
+        # specify the configuration for the '/' location
         location / {
+            # try to serve the requested URI. if that fails then try to 
+            # serve the URI with a trailing slash. if that fails, then 
+            # serve the index.html file; this is needed in order to serve 
+            # Angular routes--e.g.,'localhost:8080/customer' will serve 
+            # the index.html file
             try_files $uri $uri/ /index.html;
         }
     }
