update docker config

--- a/docker/prod/docker-compose.auth-service.yml
+++ b/docker/prod/docker-compose.auth-service.yml
@@ -12,5 +12,7 @@ services:
     restart: always
     ports:
       - ${AUTH_SERVICE_PORT}:${AUTH_SERVICE_PORT}
+    depends_on:
+      - rabbitmq
 volumes:
   auth-service-volume:
